# linefit_customized

linefit_ground_segmentation/linefit_ground_segmentation/: CMakeLists.txt
linefit_ground_segmentation/linefit_ground_segmentation/include/ground_segmentation/: bin.h  ground_segmentation.h  kitti_loader.hpp  segment.h  typedefs.h  utils.hpp
linefit_ground_segmentation/linefit_ground_segmentation/src/: bin.cc  ground_segmentation.cc  segment.cc
linefit_ground_segmentation/linefit_ground_segmentation_ros/: CMakeLists.txt
linefit_ground_segmentation/linefit_ground_segmentation_ros/launch/: offline.launch  segmentation.launch  segmentation_params.yaml
linefit_ground_segmentation/linefit_ground_segmentation_ros/src/: offline_gs.cc
linefit_ground_segmentation/run/: offline.sh
